# reality_tailwindcss

./: .gitignore  README.md  dune-project  reality_tailwindcss.opam
lib/: dune  installation.ml  realityTailwind.ml  realityTailwind.mli  system_detection.c
test/: dune
